--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>Liquid Counter</title>
   </head>
-  <body style="background-color: black;">
+  <body style="background-color: black; height: 100vh;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
